# local-rag

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  config.yaml  environment.yml  ingest.py  mcp_server.py  pyproject.toml  requirements.txt  start-rag.bat  start-rag.sh  watcher.py
.claude-plugin/skills/: setup-local-rag.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/guides/: generic.md  obsidian.md  zotero.md
docs/superpowers/plans/: 2026-03-29-local-rag.md  2026-03-30-github-and-mcp-distribution.md  2026-03-30-pypi-mcp-expansion-claude-plugin.md
docs/superpowers/specs/: 2026-03-29-local-rag-design.md  2026-03-30-github-and-mcp-distribution-design.md
local_rag/: __init__.py  chunker.py  cli.py
src/: checkpoint.py  config_loader.py  extractor.py  lightrag_client.py
tests/: test_checkpoint.py  test_chunker.py  test_config_loader.py  test_extractor.py  test_lightrag_client.py
tests/fixtures/: sample.md
